--- a/portfolio_update_v1/experience.html
+++ b/portfolio_update_v1/experience.html
@@ -8,27 +8,27 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Experience</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header id="experience">
-      <img src="https://placeimg.com/400/400/tech" alt="my experience page" class="profile-image">
+      <img src="images/profilepic.jpg" alt="profile picture" class="profile-image">
       <h1 class="tag name">Experience and Interests</h1>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Experience</h2>
         <p>I’m currently doing a techdegree with treehouse to kick start my career in web development.I hope to create a good portfoilio to help secure a job.</p>
         <p>I'm hoping to get an apprenticeship to help me progress in the web industry.</p>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Interests</h2>
         <p> Some of my interests include:</p>
          <ul>
@@ -37,7 +37,8 @@
             <li>Learning to code</li>
             <li>Gaming </li>
          </ul>
-      </div> 
+         <img src="images/fibreoptic.jpg" class="mw-image" alt="closeup image of fibre optic">
+      </article> 
 
     </main>
     <footer>
