--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Harvey Bland</li>
           <li><a href="#">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/profilepic.jpg" alt="profile picture" class="profile-image">
@@ -23,13 +23,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Background</h2>
         <p>I’m an 22 year old web designer who has a big interest about the web. I'm new to the industry but have a big passion for learning new things and enjoyds a challenge.</p>
         <p>I’ve been a professional hairdresser for the past 3 years but always had an interest in the web programming.</p>
-      </div> 
+      </article> 
 
-      <div class="card">
+      <article class="card">
         <h2>Goals</h2>
         <p>My aim is to learn and master in these different fields of web design: </p>
         <ul class="skills">
@@ -41,7 +41,7 @@
           <Li>React</Li>
         </ul>
         <p>Eventually, I’d like to work for a web design company helping create an impressive web pages.</p>
-      </div> 
+      </article> 
 
     </main>
     <footer>
